tests/ui/specialization/specialization-overlap-projection.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `u32`
  --> $DIR/specialization-overlap-projection.rs:19:1
   |
LL | impl Foo for u32 {}
   | ---------------- first implementation here
LL | impl Foo for <u8 as Assoc>::Output {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error[E0119]: conflicting implementations of trait `Foo` for type `u32`
  --> $DIR/specialization-overlap-projection.rs:21:1
   |
LL | impl Foo for u32 {}
   | ---------------- first implementation here
...
LL | impl Foo for <u16 as Assoc>::Output {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
